--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "passport-twitter": "^1.0.4",
     "pg": "^6.4.2",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^4.27.0"
+    "sequelize": "^4.27.0",
+    "sequelize-cli": "^3.2.0"
   },
   "repository": {
     "type": "git",
