--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "path": "^0.12.7",
     "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
