--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "dotenv": "^4.0.0",
     "ejs": "^2.5.2",
     "express": "^4.13.4",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.1.0",
     "method-override": "^2.3.6",
-    "mongoose": "~4.13.1",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
